--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>${spring-boot.version}</version>
+        <version>3.2.4</version> <!-- Veya en son stable sürüm -->
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
